Fixing UI Tests (#234)
* UI Tests: old way
* System out print instead of log
* No more eu.yals.test.ui in class name
* VR PageObject updated
* Wikipedia title changed
* Temporary disabling Test due to UI bug. Bug is filled
* Tests Code Cleanup
* Added Live link
* No more Vaadin TestBench
* Moving PageObjects to another package